sema/testdata/gcc-c90-as-c99/reject/c90-auto-1.c
void
f (void)
{


  auto x = 1.5;
  int *p = &x;
}
